assembly/src/snapshots/miden_assembly__tests__decorators_repeat_one_basic_block.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    basic_block
        trace(0)
        add
        add
        trace(1)
        mul
        mul
        trace(2)
        noop
        noop
        noop
        noop
        noop
    end
end
