assembly/src/snapshots/miden_assembly__tests__decorators_repeat_split.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    join
        trace(0)
        if.true
            basic_block
                trace(1)
                push(42)
                trace(2)
                noop
                noop
                noop
                noop
                noop
                noop
                noop
                noop
            end
        else
            basic_block
                trace(3)
                push(22)
                trace(3)
                noop
                noop
                noop
                noop
                noop
                noop
                noop
                noop
            end
        end
        trace(4)
        if.true
            basic_block
                trace(1)
                push(42)
                trace(2)
                noop
                noop
                noop
                noop
                noop
                noop
                noop
                noop
            end
        else
            basic_block
                trace(3)
                push(22)
                trace(3)
                noop
                noop
                noop
                noop
                noop
                noop
                noop
                noop
            end
        end
        trace(4)
    end
    trace(5)
end
