assembly/src/snapshots/miden_assembly__tests__empty_if_true_then_branch.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    if.true
        basic_block noop noop noop noop noop noop noop noop noop end
    else
        basic_block noop noop noop noop noop noop noop noop noop end
    end
end
