assembly/src/snapshots/miden_assembly__tests__module_alias.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    join
        basic_block pad incr pad push(2) pad noop noop noop noop end
        external.0x3cff5b58a573dc9d25fd3c57130cc57e5b1b381dc58b5ae3594b390c59835e63
    end
end
