assembly/src/snapshots/miden_assembly__tests__mtree_verify_with_code.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    basic_block
        mpverify(0)
        mpverify(13948122101519563734)
        mpverify(17575088163785490049)
        noop
        noop
        noop
        noop
        noop
        noop
    end
end
