assembly/src/snapshots/miden_assembly__tests__multiple_constants_push.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    basic_block push(21) push(64) push(44) push(72) noop noop noop end
end
