assembly/src/snapshots/miden_assembly__tests__program_with_nested_procedure.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    basic_block
        push(2)
        push(4)
        add
        push(3)
        push(7)
        mul
        push(11)
        push(5)
        noop
        push(3)
        push(7)
        mul
        add
        neg
        add
    end
end
