assembly/src/snapshots/miden_assembly__tests__program_with_one_procedure.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    basic_block push(2) push(3) add push(3) push(7) mul noop noop end
end
